# kalytera-server

./: .env.example  .gitignore  API_ENDPOINTS.md  AgentIQ — One Pager.html  CLAUDE (1).md  CLAUDE.md  CODING_PROMPT.md.txt  COMPREHENSIVE_TESTING_PLAN.md  CRITICAL_ISSUES_FIX_PLAN.md  DEPLOY_TO_RAILWAY.md  END_TO_END_TESTING_GUIDE.md  FIXES_APPLIED.md  HOW_TO_TEST_DASHBOARD.md  INIT_PROMPT.md  INIT_PROMPT.md.txt  LAUNCH_POST.md  Procfile  README.md  README_AUTONOMOUS.md  README_DASHBOARD.md  README_DEPLOYMENT.md  REVIEWER_PROMPT.md.txt  TESTING_PLAN.md  TEST_RESULTS.md  agentiq-onepager-final.html  agentiq_sdk_example.py  alembic.ini  autonomous_llm_judge.py  claude-progress.txt  complete_deployment.py  comprehensive_agentiq_test.py  create_github_repo.py  create_production_demo_data.py  create_sample_evaluations.py  dashboard_render.yaml  dashboard_requirements.txt  debug_intent.py  deploy_to_render.sh  detect_production.py  docker-compose.yml  (+36 more)
.claude/: session_log.txt  settings.json  settings.local.json
.streamlit/: config.toml
_archive/: agent_testing_framework.py  agentiq_content_preserved_platform.py  agentiq_dashboard.py  agentiq_enterprise_platform.py  agentiq_fixed_professional_platform.py  agentiq_mvp_dashboard.py  agentiq_production_sdk.py  agentiq_professional_platform.py  agentiq_sdk.py  agentiq_sdk_example.py  coding_agent_dashboard.py  complete_agentiq_example.py  complete_deployment.py  create_github_repo.py  detect_production.py  enterprise_agentiq_dashboard.py  enterprise_scale_loader.py  live_demo.py  load_diverse_agent_data.py  load_enterprise_scale_data.py  load_massive_coding_data.py  load_massive_unique_data.py  load_production_data.py  monitor_deployment.py  populate_sophisticated_data.py  prepare_launch_post.py  quick_fix_validation.py  quick_massive_data_fix.py  real_time_dashboard.py  simplified_direct_dashboard.py  sophisticated_demo.py  test_agent_integration.py  test_integration.py  (+9 more)
(+87 files in other folders)
